lib/src/native/lore_dub_native.g.dart

// Copyright (c) 2026 LoreDub contributors.
// SPDX-License-Identifier: MIT
// Generated by package:ffigen. Do not edit manually.
// Regenerate with: dart run tool/ffigen.dart
// ignore_for_file: type=lint, unused_import, unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:lore_dub/src/native/lore_dub_native.g.dart')
library;

import 'dart:ffi' as ffi;

import 'package:meta/meta.dart' as meta;

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function()>()
external int ld_abi_version();

@meta.RecordUse()
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>()
external ffi.Pointer<ffi.Char> ld_error_message(
  int error_code,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function()>()
external int ld_is_process_loopback_supported();

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int ld_list_processes_json(
  ffi.Pointer<ffi.Char> output,
  int capacity,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>()
external int ld_play_wave(
  ffi.Pointer<ffi.Char> utf8_path,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int ld_poll_event_json(
  ffi.Pointer<ffi.Char> output,
  int capacity,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int ld_probe_graphics_json(
  ffi.Pointer<ffi.Char> output,
  int capacity,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function()>()
external int ld_restore_process_volumes();

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Uint32, ffi.Float)>()
external int ld_set_process_volume(
  int process_id,
  double volume,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>()
external int ld_start(
  ffi.Pointer<ffi.Char> config_json,
);

@meta.RecordUse()
@ffi.Native<ffi.Int32 Function()>()
external int ld_stop();
